# blitz-quick

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  justfile  package.json  tsconfig.json
apps/demo/: package.json  tsconfig.json  vite.config.ts
apps/demo/src/: css-modules.d.ts  hmr-transform.test.ts  index.tsx  reset.css
apps/demo/src/components/: CustomTextInput.tsx  Sidebar.tsx  Switch.tsx  ToggleRow.tsx  tabs.tsx
apps/demo/src/pages/: Dashboard.tsx  InputDemo.tsx  Logs.tsx  Network.tsx  Settings.tsx
apps/hackernews/: Cargo.toml  package.json  tsconfig.json  vite.config.ts
apps/hackernews/src/: main.rs
crates/blitz-quick/: Cargo.toml
crates/blitz-quick-desktop/: Cargo.toml
crates/blitz-quick-desktop/examples/: html.rs
crates/blitz-quick-desktop/src/: cli.rs  lib.rs  main.rs  vite.rs  watcher.rs
crates/blitz-quick/src/: applier.rs  dom_updater.rs  events.rs  fetch.rs  host_ffi.rs  jsrt.rs  lib.rs  protocol.rs  resize.rs  vite.rs
docs/: ARCHITECTURE.md
patches/: blitz-dom-apple-keybinding.patch
scripts/: gen-core-prelude.ts  gen-rust-op.ts  gen-test-runtime.ts  gen-vite-runtime.ts
src/: applier.rs  dom_updater.rs  events.rs  fetch.rs  host_ffi.rs  jsrt.rs  main.rs  protocol.rs  watcher.rs
