[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
blitz-dom = {
  git = "https://github.com/DioxusLabs/blitz",
  rev = "1973351",
}
blitz-net = { git = "https://github.com/DioxusLabs/blitz", rev = "1973351" }
blitz-paint = {
  git = "https://github.com/DioxusLabs/blitz",
  rev = "1973351",
}
blitz-shell = { git = "https://github.com/DioxusLabs/blitz", rev = "1973351" }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "1973351" }

[profile.dev.package."*"]
opt-level = 2
