[workspace]
resolver = "3"
members = ["apps/hackernews", "crates/*"]

[workspace.dependencies]
blitz-dom = {
  git = "https://github.com/DioxusLabs/blitz",
  rev = "1973351",
}
blitz-net = { git = "https://github.com/DioxusLabs/blitz", rev = "1973351" }
blitz-paint = {
  git = "https://github.com/DioxusLabs/blitz",
  rev = "1973351",
}
blitz-shell = { git = "https://github.com/DioxusLabs/blitz", rev = "1973351" }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "1973351" }

# crates
blitz-quick = { path = "crates/blitz-quick" }
blitz-quick-desktop = { path = "crates/blitz-quick-desktop", default-features = false }
snafu = "0.9.1"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = true
