[package]
name = "blitz-quick"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Vite dev-server integration: module loading over HTTP + WebSocket HMR.
# Enabled by embedding apps that want `vite` dev mode (e.g. desktop).
vite = ["dep:tungstenite"]

[dependencies]
# Enable system_fonts on blitz-dom directly: the `blitz` crate sets
# default-features = false on blitz-dom and has no passthrough, so without this
# the document only has the bullet font and text renders with no glyphs.
blitz-dom = { workspace = true }
blitz-traits = { workspace = true }
futures-lite = "2"
reqwest = {
  version = "0.13",
  default-features = false,
  features = ["blocking"]
}
rquickjs = { version = "0.12.1", features = ["full-async"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
snafu = "0.9.1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tracing = "0.1"
tungstenite = {
  version = "0.28",
  default-features = false,
  features = ["handshake"],
  optional = true,
}
url = "2.5"
